# gnome-shell-extension-focus-timer

./: .editorconfig  CONTRIBUTING.md  NEWS  README.md  gnome-shell-extension-focus-timer.doap  make-zip.sh  meson.build  meson_options.txt
data/: meson.build  org.gnome.shell.extensions.focus-timer.gschema.xml
po/: POTFILES  POTFILES.in  ca.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gnome-shell-extension-focus-timer.pot  he.po  hr.po  id.po  it.po  ka.po  kk.po  ko.po  lt.po  meson.build  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  ta.po  te.po  zh_CN.po
src/: config.js.in  dbus.js  distractions.js  extension.js  indicator.js  meson.build  metadata.json.in  notifications.js  prefs.js  screenOverlay.js  screenShield.js  session.js  settings.js  stylesheet-light.css  stylesheet.css  timer.js  timerControlButtons.js  timerLabel.js  timerProgressBar.js  utils.js
tools/: eslint.config.js  package-lock.json  package.json  run-es-lint.sh
